packages/lustre-v6.6.103.3/test/should_fail/bad_ident.lus
  
node bad_ident(x':bool) returns (res:bool);
let
  res = x';
tel
  -- end of bad_ident

node bad_ident2(double:bool) returns (res:bool);
let
  res = double;
tel
